--- a/profile-page-react/package.json
+++ b/profile-page-react/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "material-design-lite": "^1.3.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-mdl": "^1.11.0",
