Updated Pokemon table, added config table, & added sendgrid

--- a/ProfileWebCore/appsettings.json
+++ b/ProfileWebCore/appsettings.json
@@ -7,5 +7,7 @@
 	"ConnectionStrings": {
 		"localDb": "Server=.;Database=ProfileDb;Trusted_Connection=True;"
 	},
-	"AllowedHosts": "*"
+	"AllowedHosts": "*",
+	"SendGridUser": "albertojurbina@gmail.com",
+	"SendGridKey": "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"
 }
